linux/libcmt/include/libcmt/abi.h

#define CMT_ABI_FUNSEL(A, B, C, D) \
	( ((uint32_t)(D) << 000) \
	| ((uint32_t)(C) << 010) \
	| ((uint32_t)(B) << 020) \
	| ((uint32_t)(A) << 030))
#define CMT_ABI_FUNSEL(A, B, C, D) \
	( ((uint32_t)(A) << 000) \
	| ((uint32_t)(B) << 010) \
	| ((uint32_t)(C) << 020) \
	| ((uint32_t)(D) << 030))