sys-utils/libcmt/include/libcmt/rollup.h

typedef struct cmt_rollup {
    union cmt_io_driver io[1];
    cmt_merkle_t merkle[1];
} cmt_rollup_t;
/** Public struct with the advance state contents */
typedef struct cmt_rollup_advance {
    uint64_t chain_id;                        /**< network */
    uint8_t app_contract[CMT_ADDRESS_LENGTH]; /**< application contract address */
    uint8_t msg_sender[CMT_ADDRESS_LENGTH];   /**< input sender address */
    uint64_t block_number;                    /**< block number of this input */
    uint64_t block_timestamp;                 /**< block timestamp of this input UNIX epoch format) */
    uint64_t index;                           /**< input index (in relation to all inputs ever sent to the DApp) */
    uint32_t payload_length;                  /**< length in bytes of the payload field */
    void *payload;                            /**< payload for this input */
} cmt_rollup_advance_t;