sys-utils/libcmt/include/libcmt/merkle.h

enum {
    CMT_MERKLE_MAX_DEPTH = 64, /**< merkle tree height */
};
/** Opaque Merkle tree state.
 * initialize with: @ref cmt_merkle_init */
typedef struct {
    uint64_t leaf_count;
    uint8_t state[CMT_MERKLE_MAX_DEPTH][CMT_KECCAK_LENGTH];
    const uint8_t (*zero)[CMT_KECCAK_LENGTH];
} cmt_merkle_t;
/** Initialize a @ref cmt_merkle_t tree state.
 *
 * @param [in] me    uninitialized state */
void cmt_merkle_init(cmt_merkle_t *me);
/** Finalize a @ref cmt_merkle_t tree state.
 *
 * @param [in] me    initialized state
 *
 * @note use of @p me after this call is undefined behavior. */
void cmt_merkle_fini(cmt_merkle_t *me);
/** Load the a @ref cmt_merkle_t tree from a @p file handle.
 *
 * @param [in] me       either a initialized or uninitialized state
 * @param [in] filepath which file to save the merkle state
 * @return
 * - 0 on success */
int cmt_merkle_load(cmt_merkle_t *me, const char *filepath);
/** Save the a @ref cmt_merkle_t tree to a @p file handle.
 *
 * @param [in] me       either a initialized or uninitialized state
 * @param [in] filepath which file to save the merkle state
 * @return
 * - 0 on success */
int cmt_merkle_save(cmt_merkle_t *me, const char *filepath);
/** Size in bytes required by merkle state save
 *
 * @param [in] me     uninitialized state
 * @param [in] length size of @p data in bytes
 * @param [in] data   array of bytes
 * @return
 * - size of the array required by @ref cmt_merkle_state_save */
size_t cmt_merkle_max_length(void);
/** Append a leaf node
 *
 * @param [in,out] me initialized state
 * @param [in] hash   value of the new leaf
 * @return
 * - 0        success
 * - -ENOBUFS indicates the tree is full */
int cmt_merkle_push_back(cmt_merkle_t *me, uint8_t hash[CMT_KECCAK_LENGTH]);
/** Compute the keccak-256 hash of @p data and append it as a leaf node
 *
 * @param [in,out] me     initialized state
 * @param [in]     length size of @p data in bytes
 * @param [in]     data   array of bytes
 * @return
 * - 0        success
 * - -ENOBUFS indicates that the tree is full */
int cmt_merkle_push_back_data(cmt_merkle_t *me, size_t length, const void *data);
/** Retrieve the root hash of the merkle tree
 *
 * @param [in]  me   initialized state
 * @param [out] root root hash of the merkle tree */
void cmt_merkle_get_root_hash(cmt_merkle_t *me, uint8_t root[CMT_KECCAK_LENGTH]);