rollup-http/rollup-http-server/src/rollup/bindings.rs

extern "C" {
    #[doc = " Retrieve the transmit buffer @p tx\n\n @param [in] me A sucessfuly initialized state by @ref cmt_io_init\n @return\n - writable memory region (check @ref cmt_buf_t)\n @note memory is valid until @ref cmt_io_fini is called."]
    pub fn cmt_io_get_tx(me: *mut cmt_io_driver_t) -> cmt_buf_t;
}
extern "C" {
    #[doc = " Retrieve the receive buffer @p rx\n\n @param [in] me A sucessfuly initialized state by @ref cmt_io_init\n @return\n - readable memory region (check @ref cmt_buf_t)\n @note memory is valid until @ref cmt_io_fini is called."]
    pub fn cmt_io_get_rx(me: *mut cmt_io_driver_t) -> cmt_buf_t;
}
extern "C" {
    #[doc = " Perform the yield encoded in @p rr.\n\n @param [in] me A sucessfuly initialized state by @ref cmt_io_init\n @param [in,out] rr Request and Reply\n @return\n - 0 on success\n - negative errno code on error"]
    pub fn cmt_io_yield(me: *mut cmt_io_driver_t, rr: *mut cmt_io_yield_t)
        -> ::std::os::raw::c_int;
}
#[doc = "< Bytes in the hash digest"]
pub const CMT_KECCAK_LENGTH: _bindgen_ty_6 = 32;
pub type _bindgen_ty_6 = ::std::os::raw::c_uint;
#[doc = " Opaque internal keccak state"]
#[repr(C)]
#[derive(Copy, Clone)]
pub union cmt_keccak_state {
    pub b: [u8; 200usize],
    pub q: [u64; 25usize],
}
#[test]
fn bindgen_test_layout_cmt_keccak_state() {
    const UNINIT: ::std::mem::MaybeUninit<cmt_keccak_state> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<cmt_keccak_state>(),
        200usize,
        concat!("Size of: ", stringify!(cmt_keccak_state))
    );
    assert_eq!(
        ::std::mem::align_of::<cmt_keccak_state>(),
        8usize,
        concat!("Alignment of ", stringify!(cmt_keccak_state))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).b) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(cmt_keccak_state),
            "::",
            stringify!(b)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).q) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(cmt_keccak_state),
            "::",
            stringify!(q)
        )
    );
}
#[doc = " Opaque internal keccak state"]
pub type cmt_keccak_state_t = cmt_keccak_state;
#[doc = " Opaque Keccak state, used to do hash computations, initialize with:\n - @ref cmt_keccak_init\n - @ref CMT_KECCAK_INIT\n - @ref CMT_KECCAK_DECL"]
#[repr(C)]
#[derive(Copy, Clone)]
pub struct cmt_keccak {
    pub st: cmt_keccak_state_t,
    pub pt: ::std::os::raw::c_int,
    pub rsiz: ::std::os::raw::c_int,
}
#[test]
fn bindgen_test_layout_cmt_keccak() {
    const UNINIT: ::std::mem::MaybeUninit<cmt_keccak> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<cmt_keccak>(),
        208usize,
        concat!("Size of: ", stringify!(cmt_keccak))
    );
    assert_eq!(
        ::std::mem::align_of::<cmt_keccak>(),
        8usize,
        concat!("Alignment of ", stringify!(cmt_keccak))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).st) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(cmt_keccak),
            "::",
            stringify!(st)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).pt) as usize - ptr as usize },
        200usize,
        concat!(
            "Offset of field: ",
            stringify!(cmt_keccak),
            "::",
            stringify!(pt)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).rsiz) as usize - ptr as usize },
        204usize,
        concat!(
            "Offset of field: ",
            stringify!(cmt_keccak),
            "::",
            stringify!(rsiz)
        )
    );
}
#[doc = " Opaque Keccak state, used to do hash computations, initialize with:\n - @ref cmt_keccak_init\n - @ref CMT_KECCAK_INIT\n - @ref CMT_KECCAK_DECL"]
pub type cmt_keccak_t = cmt_keccak;
extern "C" {
    #[doc = " Initialize a @ref cmt_keccak_t hasher state.\n\n @param [out] state uninitialized @ref cmt_keccak_t"]
    pub fn cmt_keccak_init(state: *mut cmt_keccak_t);
}
extern "C" {
    #[doc = " Hash @b n bytes of @b data\n\n @param [in,out] state  initialize the hasher state\n @param [in]     length bytes in @b data to process\n @param [in]     data   data to hash"]
    pub fn cmt_keccak_update(
        state: *mut cmt_keccak_t,
        n: usize,
        data: *const ::std::os::raw::c_void,
    );
}
extern "C" {
    #[doc = " Finalize the hash calculation from @b state and store it in @b md\n\n @param [in]  state initialize the hasher state (with all data already added to it)\n @param [out] md    32bytes to store the computed hash"]
    pub fn cmt_keccak_final(state: *mut cmt_keccak_t, md: *mut ::std::os::raw::c_void);
}
extern "C" {
    #[doc = " Hash all @b n bytes of @b data at once\n\n @param [in]  length bytes in @b data to process\n @param [in]  data   data to hash\n @param [out] md     32bytes to store the computed hash\n @return pointer to @b md\n\n Equivalent to:\n @code\n cmt_keccak_t st = CMT_KECCAK_INIT(&st);\n cmt_keccak_update(&st, n, data);\n cmt_keccak_final(&st, md);\n return md;\n @endcode"]
    pub fn cmt_keccak_data(
        length: usize,
        data: *const ::std::os::raw::c_void,
        md: *mut u8,
    ) -> *mut u8;
}
extern "C" {
    #[doc = " Compute the function selector from the solidity declaration @p decl\n\n @param [in]  decl   solidity call declaration, without variable names\n @param [out] funsel function selector as described by @ref funsel\n @return A @p funsel value as if defined by @ref CMT_ABI_FUNSEL\n\n Example usage:\n @code\n ...\n uint32_t funsel = cmt_keccak_funsel(\"FunctionCall(address,bytes)\");\n ...\n @endcode"]
    pub fn cmt_keccak_funsel(decl: *const ::std::os::raw::c_char) -> u32;
}
#[doc = "< merkle tree height"]
pub const CMT_MERKLE_MAX_DEPTH: _bindgen_ty_7 = 64;
pub type _bindgen_ty_7 = ::std::os::raw::c_uint;
#[doc = " Opaque Merkle tree state.\n initialize with: @ref cmt_merkle_init"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct cmt_merkle_t {
    pub leaf_count: u64,
    pub state: [[u8; 32usize]; 64usize],
    pub zero: *const [::std::os::raw::c_uchar; 32usize],
}
#[test]
fn bindgen_test_layout_cmt_merkle_t() {
    const UNINIT: ::std::mem::MaybeUninit<cmt_merkle_t> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<cmt_merkle_t>(),
        2064usize,
        concat!("Size of: ", stringify!(cmt_merkle_t))
    );
    assert_eq!(
        ::std::mem::align_of::<cmt_merkle_t>(),
        8usize,
        concat!("Alignment of ", stringify!(cmt_merkle_t))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).leaf_count) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(cmt_merkle_t),
            "::",
            stringify!(leaf_count)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).state) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(cmt_merkle_t),
            "::",
            stringify!(state)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).zero) as usize - ptr as usize },
        2056usize,
        concat!(
            "Offset of field: ",
            stringify!(cmt_merkle_t),
            "::",
            stringify!(zero)
        )
    );
}
extern "C" {
    #[doc = " Initialize a @ref cmt_merkle_t tree state.\n\n @param [in] me    uninitialized state"]
    pub fn cmt_merkle_init(me: *mut cmt_merkle_t);
}
extern "C" {
    #[doc = " Finalize a @ref cmt_merkle_t tree state.\n\n @param [in] me    initialized state\n\n @note use of @p me after this call is undefined behavior."]
    pub fn cmt_merkle_fini(me: *mut cmt_merkle_t);
}
extern "C" {
    #[doc = " Load the a @ref cmt_merkle_t tree from a @p file handle.\n\n @param [in] me       either a initialized or uninitialized state\n @param [in] filepath which file to save the merkle state\n @return\n - 0 on success"]
    pub fn cmt_merkle_load(
        me: *mut cmt_merkle_t,
        filepath: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Save the a @ref cmt_merkle_t tree to a @p file handle.\n\n @param [in] me       either a initialized or uninitialized state\n @param [in] filepath which file to save the merkle state\n @return\n - 0 on success"]
    pub fn cmt_merkle_save(
        me: *mut cmt_merkle_t,
        filepath: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Size in bytes required by merkle state save\n\n @param [in] me     uninitialized state\n @param [in] length size of @p data in bytes\n @param [in] data   array of bytes\n @return\n - size of the array required by @ref cmt_merkle_state_save"]
    pub fn cmt_merkle_max_length() -> usize;
}
extern "C" {
    #[doc = " Append a leaf node\n\n @param [in,out] me initialized state\n @param [in] hash   value of the new leaf\n @return\n - 0        success\n - -ENOBUFS indicates the tree is full"]
    pub fn cmt_merkle_push_back(me: *mut cmt_merkle_t, hash: *mut u8) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Compute the keccak-256 hash of @p data and append it as a leaf node\n\n @param [in,out] me     initialized state\n @param [in]     length size of @p data in bytes\n @param [in]     data   array of bytes\n @return\n - 0        success\n - -ENOBUFS indicates that the tree is full"]
    pub fn cmt_merkle_push_back_data(
        me: *mut cmt_merkle_t,
        length: usize,
        data: *const ::std::os::raw::c_void,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Retrieve the root hash of the merkle tree\n\n @param [in]  me   initialized state\n @param [out] root root hash of the merkle tree"]
    pub fn cmt_merkle_get_root_hash(me: *mut cmt_merkle_t, root: *mut u8);
}
#[repr(C)]
#[derive(Copy, Clone)]
pub struct cmt_rollup {
    pub io: [cmt_io_driver; 1usize],
    pub merkle: [cmt_merkle_t; 1usize],
}
#[test]
fn bindgen_test_layout_cmt_rollup() {
    const UNINIT: ::std::mem::MaybeUninit<cmt_rollup> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<cmt_rollup>(),
        2280usize,
        concat!("Size of: ", stringify!(cmt_rollup))
    );
    assert_eq!(
        ::std::mem::align_of::<cmt_rollup>(),
        8usize,
        concat!("Alignment of ", stringify!(cmt_rollup))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).io) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(cmt_rollup),
            "::",
            stringify!(io)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).merkle) as usize - ptr as usize },
        216usize,
        concat!(
            "Offset of field: ",
            stringify!(cmt_rollup),
            "::",
            stringify!(merkle)
        )
    );
}
pub type cmt_rollup_t = cmt_rollup;
#[doc = " Public struct with the advance state contents"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct cmt_rollup_advance {
    #[doc = "< the address of the input sender"]
    pub sender: [u8; 20usize],
    #[doc = "< block number of this input"]
    pub block_number: u64,
    #[doc = "< block timestamp of this input UNIX epoch format)"]
    pub block_timestamp: u64,
    #[doc = "< input index (in relation to all inputs ever sent to the DApp)"]
    pub index: u64,
    #[doc = "< length in bytes of the data field"]
    pub length: u32,
    #[doc = "< advance contents"]
    pub data: *mut ::std::os::raw::c_void,
}
